<resources>
    <string name="app_name">SWEBS</string>
    <string name="IMAGE_VIEW_URL">http://dev.swebsapp.com/php/KKW_TEST/files/file_viewer.php</string>
    <string name="open">open</string>
    <string name="closed">closed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_password">
        <u>비밀번호 찾기</u>
    </string>
    <string name="make_account_email">
      회원이 아니시라면? <b> <u>회원가입 하기</u> </b>
    </string>
    <string name="online_question"> <u> www.swebs.co.kr </u></string>
    <string name="dialog_find_pass"> 가입한 이메일 주소로\n임시비밀번호를 보내겠습니다.\n로그인후 회원정보에서 변경해주세요! </string>
    <string name="scan_explain"> 사각형 안에 QR코드를 정확하게 맞춰 주세요 </string>
    <string name="find_pass_1"> 안녕하세요. SWEBS 입니다.\n회원님의 로그인을 위해 <b>임시번호</b>를 발급합니다. </string>
    <string name="find_pass_2"> 해당 메일을 수신 받은 후 일주일이 지나면 새롭게 \n발급 받으셔야 하니, 일주일 내로 로그인 하시어 \n비밀번호를 변경해주세요</string>
    <string name="link">링크접속</string>
    <string name="myPage_1">스웹스 정품인증의 원활한 서비스를 위 정보를 입력해주세요!</string>
    <string name="as_info">AS요청시 본인식별, 정품사용여부에 사용되며 본인의 동의 없이 제3자에게 제공되지 않으며 또한 본인의 요청시 언제든 즉시 삭제 될 수 있습니다.
        \n\n <b>본인의 신상정보를 제3자에게 제공하는 것에 동의 합니다.</b> </string>
    <string name="as_not_ready">본제품은 AS관련하여 \n서비스 준비중입니다</string>
    <string-array name="tabLayout_list_certified_company">
        <item>전체</item>
        <item>뷰티</item>
        <item>식품</item>
        <item>전자</item>
        <item>의학</item>
        <item>생활</item>
        <item>주방</item>
        <item>인테리어</item>
        <item>건강</item>
        <item>사무</item>
        <item>섬유</item>
        <item>기타</item>
    </string-array>
    <string-array name="tabLayout_list_event">
        <item>전체</item>
        <item>SWEBS</item>
        <item>체험단</item>
        <item>쇼핑몰</item>
        <item>제휴</item>
    </string-array>
    <string-array name="tabLayout_list_review">
        <item>전체</item>
        <item>리뷰순</item>
        <item>인기도순</item>
        <item>스캔순</item>
        <item>제품별</item>
    </string-array>
    <string-array name="tabLayout_list_survey">
        <item>전체</item>
        <item>진행중 서베이</item>
        <item>마감 서베이</item>
        <item>참여 서베이</item>
    </string-array>
    <string name="purchase_register00">구매등록</string>
    <string name="purchase_register01">* 구매처</string>
    <string name="purchase_register02">* 제품명</string>
    <string name="purchase_register03">* 일렬번호</string>
    <string name="purchase_register04">* 구매일자</string>
    <string name="purchase_register05">이름</string>
    <string name="purchase_register06">연락처</string>
    <string name="purchase_register07">이메일(ID)</string>
    <string name="purchase_register08">구매처를 적어주세요</string>
    <string name="purchase_register09">제품명을 입력하세요</string>
    <string name="purchase_register10">일렬번호를 입력하세요</string>
    <string name="purchase_register11">추가항목</string>
    <string name="recommend_code_title_1">안녕하세요! \n스웹스를 이용해주셔서 감사합니다.\n추천인 코드를 발송합니다. \n\n추천인코드 : </string>
    <string name="recommend_code_title_2">\n\n회원가입시 추천인 코드를 입력하시면 추천받은 분과 추천하시는 분 모두에게 100P를 드립니다. \n\n-(주)알엠지-</string>
    <string name="point_text1">회원가입하시면 100p가 지급됩니다</string>
    <string name="point_text2">정품(등록)포인트</string>
    <string name="point_text3">정품인증시 또는 구매등록 후 확정 시</string>
    <string name="point_text4">리뷰포인트</string>
    <string name="point_text5">리뷰 작성 후 5일 후</string>
    <string name="point_text6">서베이포인트</string>
    <string name="point_text7">서베이 참여 후 5일 후</string>
    <string name="point_text8">기타포인트</string>
    <string name="point_text9">회원가입, 이벤트참여 등</string>
    <string name="point_text10">포인트 사용시 주의사항</string>
    <string name="point_text11">포인트 정책</string>
    <string name="point_text12">스웹스의 포인트는 정품을 구매한 고객들이 정품스캔을 하여 확실한 서비스를 제공받고 실구매자의 직접적인 리뷰를 통한 신뢰를 바탕으로 한 시장창출을 하기 위해 사용될 예정입니다.\n\n포인트 사용가능일은 추후 공지될 예정입니다.</string>
    <string name="modify_address0">이벤트 배송지 수정</string>
    <string name="modify_address1">받는분</string>
    <string name="modify_address2">이름을 적어주세요</string>
    <string name="modify_address3">휴대폰 번호</string>
    <string name="modify_address4">휴대폰번호를 적어주세요</string>
    <string name="modify_address5">배송지</string>
    <string name="modify_address6">주소검색</string>
    <string name="modify_address7">* 입력하신 주소는 기본배송지로 설정합니다.</string>
    <string name="modify_address8">저장하기</string>
    <string name="service_terms_agree1">서비스 이용동의</string>
    <string name="service_terms_agree2">스웹스 서비스 약관에 동의</string>
    <string name="service_terms_agree3">스웹스 통합서비스 약관</string>
    <string name="service_terms_agree4">개인정보 수집 및 이용동의</string>
    <string name="service_terms_agree5">서비스 약관 및 개인정보 처리 방침 (필수)</string>
    <string name="service_terms_agree6">위치기반서비스 이용약관 (필수)</string>
    <string name="service_terms_agree7">3. 마케팅 수신 정보 (선택)</string>
    <string name="service_terms_agree8">제 3자에게 정보 제공 (선택)</string>
    <string name="service_terms_agree9"> </string>
    <string name="service_terms_agree10"> </string>
    <string name="point_advice_0">포인트 사용시 주의사항</string>
    <string name="point_advice_1">포인트 적립 안내</string>
    <string name="point_advice_2"><b>기본적립 :</b> 회원가입, 스캔횟수, 리뷰, \n서베이 참여에 따른 적립과 이벤트 참여시 배송비와 적립금 \n사용분을 제외한 적립</string>
    <string name="point_advice_3">포인트 적립 기준</string>
    <string name="point_advice_4">- 구매 후 정품 QR스캔 시 \n- 구매 등록 후 확정 시 \n- 리뷰 작성 후 5일 후 \n- 서베이 참여 후 5일 후 \n- 기타 활동 후 주최 측 승인 후</string>
    <string name="point_advice_5">탈퇴 후 소멸 : </string>
    <string name="point_advice_6">소멸된 포인트는 복구 불가</string>
    <string name="point_advice_7">포인트 사용 안내</string>
    <string name="point_advice_8"><b>사용기준 :</b> 스웹스에서 이벤트 참여 및 제휴맺은 쇼핑몰 구매결제시에만 사용 가능</string>
    <string name="point_advice_9">사용제한 : </string>
    <string name="point_advice_10">상품금액기준 30,000원 이상 구매 시 사용 가능하며, 10000p이상부터 사용가능하고, 최종 실결제금액의 100%까지 사용 가능</string>
    <string name="point_advice_11">유의사항</string>
    <string name="point_advice_12">- 특정 이벤트 혹은 프로모션에 의해 적립되는 포인트는 적립과 사용에 있어 별도의 기준(적립율, 유효기간, 사용제한 등)들이 적용될 수 있습니다. \n- 결제 취소 혹은 반품 시, 구매 시 사용했던 포인트는 환불 완료 후 복구됩니다 (단, 유효기간이 남아있지 않은 포인트는 복구 불가) \n- 배송완료된 제품의 반품 시, 결제금액에 따라 지급됐던 포인트는 환불 완료 후 회수됩니다 \n- 포인트 정책 및 관련 규정은 개별적 예고 없이 변동될 수 있습니다.</string>
    <string name="qr_link_1">해당 상품은 일반 QR/바코드입니다.</string>
    <string name="qr_link_2">Not certification code</string>
    <string name="qr_link_3">방금 스캔한 QR코드는 SWEBS 정품과는 관계없는 \n일반 QR/바코드입니다.</string>
    <string name="qr_link_4">스캔정보 </string>
    <string name="qr_link_5">Link 연결</string>
    <string name="reg_success_1">제품 등록이 완료되었습니다.</string>
    <string name="modify_user_info_1">회원정보 수정</string>
    <string name="modify_user_info_2">촬영하기</string>
    <string name="modify_user_info_3">가져오기</string>
    <string name="review_write_0">리뷰작성</string>
    <string name="review_write_1">리뷰 작성 전에 꼭 보세요</string>
    <string name="review_write_2">리뷰 남길 제품을 등록해주세요 (리뷰작성시 50p 지급)</string>
    <string name="review_write_3">제 점수는요?</string>
    <string name="review_write_4">30자 이내로 제목을 적어주세요</string>
    <string name="review_write_5">20자 ~ 5000자 \n내용을 적어주세요</string>
    <string name="review_write_6">* 리뷰 제목</string>
    <string name="review_write_7">* 리뷰 내용</string>
    <string name="review_write_8">사진 첨부하기</string>
    <string name="review_write_9">사진첨부시 추가 50p 지급</string>
    <string name="review_write_10">상품과 무관한 리뷰나 사진(동영상)은 수정요청을 드리거나 통보없이 삭제되며 검수 후 포인트 지급이 됩니다. 포인트 지급은 1인당 최대 월 3000P까지 입니다.</string>
    <string name="review_write_11">리뷰 등록</string>
    <string name="manual_review_1">리뷰작성 메뉴얼</string>
    <string name="manual_review_2">리뷰 수정 요청 및 삭제 기준</string>
    <string name="manual_review_3">스웹스는 실구매자들이 안심하고 제품을 사용할 수 있도록 정품인증 및 사용리뷰를 요청 드리고 있습니다.</string>
    <string name="manual_review_4">(삭제)</string>
    <string name="manual_review_5">1. 욕설, 음란, 고의성 악평에 대한 리뷰는 통보없이 삭제 \n2. 반복, 도배성 리뷰 \n3. 실 구매자 아닌 경우</string>
    <string name="manual_review_6">(수정요청)</string>
    <string name="manual_review_7">1. 정보성이 부족하거나 매우 간략한 리뷰 \n2. 제품의 장단점이 잘 표현되지 않은 리뷰 \n3. 알아보기 힘든 문자나 오타가 심한 리뷰 \n4. 각 제품과 맞지 않은 리뷰나 사진 \n5. 개인정보를 포함한 리뷰 \n6. 거래 및 홍보를 목적으로 한 리뷰 \n7. 명예훼손, 저작권 침해등의 우려가 있는 리뷰 \n8. 기본 에티켓을 침해한 리뷰</string>
    <string name="manual_review_8">확 인</string>
    <string name="recommend_code1">추천인 코드</string>
    <string name="recommend_code2">공유하기</string>
    <string name="recommend_code3">코드복사</string>
    <string name="product_reg_text_0">제품등록</string>
    <string name="product_reg_text_1">제품이미지 등록</string>
    <string name="product_reg_text_2">첨부파일은 Jpeg, jpg, gif, png, bmp, tif \n이미지 형식이여야 합니다.</string>
    <string name="product_reg_text_3">* 일련번호</string>
    <string name="product_reg_text_4">일련번호 앞 자리</string>
    <string name="product_reg_text_5">일련번호 뒷 자리</string>
    <string name="product_reg_text_6">* 회사명</string>
    <string name="product_reg_text_7">* 제품명</string>
    <string name="product_reg_text_8">제품명을 입력하세요</string>
    <string name="product_reg_text_9">* 카테고리</string>
    <string name="product_reg_text_10">카테고리 선택</string>
    <string name="product_reg_text_11">* MARKET</string>
    <string name="product_reg_text_12">URL 내용을 적어주세요</string>
    <string name="product_reg_text_13">* 세부내용</string>
    <string name="product_reg_text_14">내용을 적어주세요</string>
    <string name="product_reg_text_15">파일첨부</string>
    <string name="product_reg_text_16">태그입력</string>
    <string name="product_reg_text_17">태그입력 (최대 3개)</string>
    <string name="product_reg_text_18">추가</string>
    <string name="product_reg_text_19">제품등록</string>
    <string name="product_reg_text_20">파일첨부</string>
    <string name="my_review_text_1">내 리뷰</string>
    <string name="my_review_text_2">정렬</string>
    <string-array name="spinner_list">
        <item>진행중</item>
        <item>마감</item>
    </string-array>
    <string-array name="my_review_tab_list">
        <item>내 리뷰</item>
        <item>찜한 리뷰</item>
    </string-array>
    <string name="my_event_text_1">내 이벤트</string>
    <string-array name="my_event_tab_list">
        <item>신청이벤트</item>
        <item>당첨이벤트</item>
        <item>찜한이벤트</item>
    </string-array>
    <string name="my_survey_text_1">내 서베이</string>
    <string-array name="my_survey_tab_list">
        <item>진행중 서베이</item>
        <item>마감 서베이</item>
        <item>참여 서베이</item>
    </string-array>
    <string name="show"> <u>보기</u> </string>
    <string name="dialog_input_pass1">안내</string>
    <string name="dialog_input_pass2">수정을 위해서 다시 한번 비밀번호를 \n입력해주세요.</string>
    <string name="dialog_input_pass3">비밀번호 입력</string>
    <string name="dialog_input_pass4">비밀번호가 틀렸습니다.</string>
    <string name="event_info_sample"> • 담당자가 예약확정 여부를 문자로 알려드립니다.\n※본 상품의 항공/객실은 구매 확인 후 확정여부에 대해 개별 안내 드립니다. \n\n별도의 해피콜 없이 예약시 기재된 번호로 예약문자 발송 됩니다. (미확정 상품이므로, 좌석마감으로 인한 이용불가 시 100% 환불 or 타항공사 대체가능성 있음) 구매 시 연락 받으실 번호를 정확하게 기재 부탁드립니다. \n\n·최소출발인원 : 2인 (1인일 경우 문의바랍니다.) \n\n·여행 요금은 1인 요금이므로, 인원수에 맞게 쿠폰을 구매해주세요. (대인/소인 동일) \n\n·소인(만2세~만13세미만)요금은 성인 요금과 동일합니다. ·유아(24개월 미만)요금은 무료이며, 별도 항공좌석이 배정되지 않습니다. \n(단, 의료보험증 또는 가족관계증명서 지참/ 학생은 신분증 필히 지참) \n\n·구매 시 별도입력창에 실탑승자성함을 주민등록증상 실명과 동일하게 기입해주세요. (대인/소인 구분) \n\n·출발일별로 구매 부탁 드리며 구매 후 출발일/귀국일 변경 불가합니다. (취소수수료발생)</string>
    <string name="makeAccount_success">감사합니다.\n믿음과 신뢰를 바탕으로 한 정품보안 및 인증 통합 플랫폼 <b>스웹스에 가입되었습니다.</b> </string>
    <string name="makeAccount_success2"><b>가입축하 포인트 50P</b>가 지급되었습니다. \n회원정보에서 추가정보를 입력하시면 <b>추가 포인트 50P</b>가 더 지급됩니다</string>
    <string name="delete_id_info">- 프로필정보 \n- 아이디 정보삭제(재사용불가) : 닉네임 제외 \n- 소식받기 \n- 포인트 및 쿠폰</string>
    <string name="authentic_scan_text1"> 제품등록을 하시면 <b>포인트 50p</b>를 받고 AS 및 \n 이벤트 참여 혜택을 드립니다.</string>
</resources>