<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.PointFragment.PointAdviceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView42"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:padding="15dp"
            android:text="@string/point_advice_1"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView43"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="60dp"
            android:lineSpacingExtra="9dp"
            android:text="@string/point_advice_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView42" />

        <View
            android:id="@+id/view18"
            style="@style/Divider"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/lower_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView43" />

        <TextView
            android:id="@+id/textView44"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/point_advice_3"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view18" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="100dp"
            android:lineSpacingExtra="9dp"
            android:text="@string/point_advice_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView44" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/point_advice_5"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textView45"
            app:layout_constraintTop_toBottomOf="@+id/textView45" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/point_advice_6"
            android:textColor="#ED6D6D"
            app:layout_constraintBottom_toBottomOf="@+id/textView46"
            app:layout_constraintStart_toEndOf="@+id/textView46"
            app:layout_constraintTop_toTopOf="@+id/textView46" />

        <View
            android:id="@+id/view20"
            style="@style/Divider"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/lower_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView46" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/point_advice_7"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view20" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="60dp"
            android:lineSpacingExtra="9dp"
            android:text="@string/point_advice_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView47" />

        <TextView
            android:id="@+id/textView50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/point_advice_9"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textView49"
            app:layout_constraintTop_toBottomOf="@+id/textView49" />

        <TextView
            android:id="@+id/textView51"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/point_advice_10"
            android:textColor="#ED6D6D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView50" />

        <View
            android:id="@+id/view21"
            style="@style/Divider"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/lower_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView51" />

        <TextView
            android:id="@+id/textView52"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/point_advice_11"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view21" />

        <TextView
            android:id="@+id/textView53"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="50dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/point_advice_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView52" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>