<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView65"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/manual_review_1"
        android:textColor="@color/swebs_main_color2"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/manual_review_2"
        android:textColor="@color/black"
        android:textSize="19dp"
        app:layout_constraintStart_toStartOf="@+id/textView65"
        app:layout_constraintTop_toBottomOf="@+id/textView65" />

    <TextView
        android:id="@+id/textView67"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:text="@string/manual_review_3"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView66" />

    <View
        android:id="@+id/view24"
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/lower_gray"
        app:layout_constraintTop_toBottomOf="@+id/textView67"
        tools:layout_editor_absoluteX="6dp" />

    <TextView
        android:id="@+id/textView68"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:text="@string/manual_review_4"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view24" />

    <TextView
        android:id="@+id/textView69"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/manual_review_5"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView68" />

    <View
        android:id="@+id/view25"
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textView69"
        tools:layout_editor_absoluteX="-2dp" />

    <TextView
        android:id="@+id/textView70"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:text="@string/manual_review_6"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view25" />

    <TextView
        android:id="@+id/textView71"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/manual_review_7"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView70" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@drawable/bottom_round_corner_background"
        android:elevation="7dp"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btn_review_write"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/radious_button_swebscolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_review_8"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btn_review_write"
            app:layout_constraintEnd_toEndOf="@+id/btn_review_write"
            app:layout_constraintStart_toStartOf="@+id/btn_review_write"
            app:layout_constraintTop_toTopOf="@+id/btn_review_write" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>