<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FAFAFA"
    tools:context=".Activity.QRLinkActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/transparent"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            app:elevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_link_scan_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_baseline_arrow_back_24"
                    android:backgroundTint="@color/black" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />


                <TextView
                    android:id="@+id/textView_link_scan_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="인증결과"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/btn_link_scan_menu"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_baseline_more_horiz_24"
                    android:backgroundTint="@color/black" />


            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/ic_qr_code"
        android:backgroundTint="@color/swebs_main_color2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:id="@+id/point_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView_qr_link_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qr_link_1"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/qr_link_2"
                android:textSize="12dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView48"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/qr_link_3"
        android:textColor="#323334"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    <LinearLayout
        android:id="@+id/linearLayout30"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="35dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView48">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:text="@string/qr_link_4"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView_url_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:textSize="14dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/bottom_round_corner_background"
            android:elevation="7dp"
            android:padding="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout30">

            <ImageButton
                android:id="@+id/btn_qr_link"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/radious_button_swebscolor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qr_link_5"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btn_qr_link"
                app:layout_constraintEnd_toEndOf="@+id/btn_qr_link"
                app:layout_constraintStart_toStartOf="@+id/btn_qr_link"
                app:layout_constraintTop_toTopOf="@+id/btn_qr_link" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>